--- a/main.html
+++ b/main.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>A flower, sometimes known as a bloom or blossom</p>
+	</div>
+
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>A flower, sometimes known as a bloom or blossom</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
